@@ -20,6 +20,7 @@ void pw_extauth_exit(void);
 #define EXTAUTH_CLIENT_SA_PORT "localport" EXTAUTH_KEYWORD_SEP
 #define EXTAUTH_CLIENT_PEER_HOST "peer" EXTAUTH_KEYWORD_SEP
 #define EXTAUTH_CLIENT_ENCRYPTED "encrypted" EXTAUTH_KEYWORD_SEP
+#define EXTAUTH_CLIENT_SNI_NAME "sni_name" EXTAUTH_KEYWORD_SEP
 #define EXTAUTH_CLIENT_END "end"
 
 #define EXTAUTH_REPLY_AUTH_OK "auth_ok" EXTAUTH_KEYWORD_SEP
